# mve

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.txt  Dockerfile  LICENSE.txt  Makefile  Makefile.inc  README.md  README.txt  appveyor.yml
apps/: CMakeLists.txt  Makefile
apps/bundle2ply/: CMakeLists.txt  Makefile  bundle2ply.cc
apps/bundle2pset/: CMakeLists.txt  Makefile  bundle2pset.cc
apps/dmfusion/: Makefile  aabb2mesh.sh  dmfextract.cc  dmfoctree.cc  dmfslicer.cc  dmfsurface.cc  tetgen.cc  tetgen.h
apps/dmrecon/: CMakeLists.txt  Makefile  _merge.cc  dmrecon.cc  fancy_progress_printer.cc  fancy_progress_printer.h
apps/featurerecon/: Makefile  featurerecon.cc
apps/fssr_octree/: Makefile  fssr_octree.cc
apps/fssr_surface/: Makefile  fssr_surface.cc
apps/fssrecon/: CMakeLists.txt  fssrecon.cc
apps/makescene/: CMakeLists.txt  Makefile  makescene.cc
apps/mesh2pset/: CMakeLists.txt  Makefile  mesh2pset.cc
apps/meshalign/: CMakeLists.txt  Makefile  meshalign.cc  meshlab_alignment.cc  meshlab_alignment.h  range_image.h  stanford_alignment.cc  stanford_alignment.h
apps/meshclean/: CMakeLists.txt  Makefile  meshclean.cc
apps/meshconvert/: CMakeLists.txt  Makefile  meshconvert.cc
apps/mveshell/: Makefile  mveshell.cc  shell.cc  shell.h
apps/prebundle/: CMakeLists.txt  prebundle.cc
apps/scene2poisson/: Makefile  octree.cc  octree.h  scene2poisson.cc
apps/scene2pset/: CMakeLists.txt  Makefile  scene2pset.cc
apps/sceneupgrade/: CMakeLists.txt  sceneupgrade.cc
apps/sfmrecon/: CMakeLists.txt  Makefile  sfmrecon.cc
apps/umve/: CMakeLists.txt  batchoperations.cc  batchoperations.h  camerasequence.cc  clickimage.h  dlldefines.h  fshelpers.cc  fshelpers.h  glwidget.cc  glwidget.h  guihelpers.cc  guihelpers.h  jobqueue.cc  jobqueue.h  mainwindow.cc  mainwindow.h  mainwindowtab.cc  mainwindowtab.h  scenemanager.cc  scenemanager.h  sceneoverview.cc  sceneoverview.h  selectedview.cc  selectedview.h  umve.cc  umve.pro  umve.qrc
apps/viewupgrade/: viewupgrade.cc
libs/: CMakeLists.txt  Makefile
libs/dmrecon/: CMakeLists.txt  DMRecon.cpp  DMRecon.h  GlobalViewSelection.cpp  GlobalViewSelection.h  ImagePyramid.cpp  ImagePyramid.h  LocalViewSelection.cpp  LocalViewSelection.h  Makefile  Makefile.dep  PatchOptimization.cpp  PatchOptimization.h  PatchSampler.cpp  PatchSampler.h  Progress.h  Settings.cpp  Settings.h  SingleView.cpp  SingleView.h  ViewSelection.h  defines.h  dmrecon.cc  dmrecon.h  global_view_selection.cc  global_view_selection.h  image_pyramid.cc  image_pyramid.h  local_view_selection.cc  local_view_selection.h  mvs_tools.cc  mvs_tools.h  mvstools.cpp  mvstools.h  patch_optimization.cc  patch_optimization.h  patch_sampler.cc  patch_sampler.h  progress.h  settings.cc  (+4 more)
libs/fssr/: CMakeLists.txt  Makefile  basis_function.cc  basis_function.h  defines.h  hermite.cc  hermite.h  iso_octree.cc  iso_octree.h  iso_surface.cc  iso_surface.h  mesh_clean.cc  mesh_clean.h  octree.cc  octree.h  pointset.cc  pointset.h  sample.h  sample_io.cc  sample_io.h  triangulation.cc  triangulation.h  voxel.cc  voxel.h
libs/iso/: BinaryNode.h  IsoOctree.h  IsoOctree.inl  MarchingCubes.h  MarchingCubes.inl  NeighborKey.h  NeighborKey.inl  Octree.h  Octree.inl  SimonIsoOctree.h  SimonIsoOctree.inl
libs/math/: CMakeLists.txt  Makefile  _gtest_accum.cc  _gtest_algo.cc  _gtest_geom.cc  _gtest_matrix.cc  _gtest_solver.cc  _test.cc  accum.h  algo.h  bezier_curve.h  beziercurve.h  bspline.h  defines.h  functions.h  geometry.h  jacobi_solver.h  jacobisolver.h  line.h  matrix.h  matrix_qr.h  matrix_svd.h  matrix_tools.h  matrixtools.h  octree_tools.h  octreetools.h  permute.h  plane.h  quaternion.h  transform.h  vector.h
libs/mve/: CMakeLists.txt  Makefile  Makefile.dep  _gtest_camera.cc  _gtest_image.cc  _gtest_image_color.cc  _gtest_image_file.cc  _gtest_image_io.cc  _gtest_image_tools.cc  _gtest_imagecolor.cc  _gtest_imagedrawing.cc  _gtest_imagefile.cc  _gtest_imagetools.cc  _gtest_mesh_tools.cc  _gtest_meshtools.cc  _gtest_triangle_mesh.cc  _gtest_trianglemesh.cc  _test.cc  _test.pro  _test_bilateral.cc  _test_camera.cc  _test_cstrans.cc  _test_geom.cc  _test_image.cc  _test_marching.cc  _test_meshexport.cc  _test_misc.cc  _test_rangeimage.cc  _test_scene.cc  _test_tetmesh.cc  _test_view.cc  bilateral.h  bundle.cc  bundle.h  bundle_file.cc  bundle_file.h  bundle_io.cc  bundle_io.h  bundlefile.cc  bundlefile.h  (+80 more)
libs/ogl/: CMakeLists.txt  Makefile  Makefile.dep  _test.cc  cam2d.cc  cam2d.h  camera.h  camera_2d.cc  camera_2d.h  camera_trackball.cc  camera_trackball.h  camtrackball.cc  camtrackball.h  check_gl_error.h  context.h  defines.h  events.cc  events.h  key_symbols.h  keysyms.h  mesh_renderer.cc  mesh_renderer.h  meshrenderer.cc  meshrenderer.h  opengl.h  render_tools.cc  render_tools.h  rendertools.cc  rendertools.h  shader_program.cc  shader_program.h  shaderprogram.cc  shaderprogram.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h  vertexarray.cc  (+3 more)
libs/sfm/: CMakeLists.txt  Makefile  _gtest_homography.cc  _gtest_matching.cc  _gtest_matrixpinv.cc  _gtest_matrixqrdecomp.cc  _gtest_matrixsvd.cc  _gtest_pose.cc  _gtest_surf.cc  _test.cc  _test_bundle.cc  _test_bundle_adjustment.cc  _test_bundler.cc  _test_camera_db.cc  _test_features.cc  _test_homography.cc  _test_matching.cc  _test_pose.cc  _test_sparse_matrix.cc  ba_cholesky.h  ba_conjugate_gradient.h  ba_dense_vector.h  ba_interface.cc  ba_interface.h  ba_linear_solver.cc  ba_linear_solver.h  ba_sparse_matrix.h  ba_types.h  bundle.cc  bundle.h  bundle_adjustment.cc  bundle_adjustment.h  bundler.cc  bundler.h  bundler_common.cc  bundler_common.h  bundler_features.cc  bundler_features.h  bundler_incremental.cc  bundler_incremental.h  (+68 more)
libs/util/: CMakeLists.txt  Makefile  Makefile.dep  _gtest_alignedmemory.cc  _gtest_file_system.cc  _gtest_filesystem.cc  _gtest_refptr.cc  _gtest_string.cc  _test.cc  _test_args.cc  _test_refptr.cc  aligned_allocator.h  aligned_memory.h  alignedmemory.h  arguments.cc  arguments.h  atomic.h  clocktimer.h  defines.h  endian.h  exception.h  (+25 more)
(+311 files in other folders)
