cmake_minimum_required(VERSION 3.0)

project(mveApps)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(TARGET mve_util)
  add_library(mve::mve_util ALIAS mve_util)
  add_library(mve::mve_mve ALIAS mve_mve)
  add_library(mve::mve_ogl ALIAS mve_ogl)
  add_library(mve::mve_fssr ALIAS mve_fssr)
  add_library(mve::mve_dmrecon ALIAS mve_dmrecon)
  add_library(mve::mve_math ALIAS mve_math)
  add_library(mve::mve_sfm ALIAS mve_sfm)
else()
  find_package(mve CONFIG REQUIRED)
endif()

add_subdirectory(dmrecon)
add_subdirectory(fssrecon)
add_subdirectory(makescene)
add_subdirectory(mesh2pset)
add_subdirectory(meshalign)
add_subdirectory(meshclean)
add_subdirectory(meshconvert)
add_subdirectory(prebundle)
add_subdirectory(scene2pset)
add_subdirectory(sceneupgrade)
add_subdirectory(sfmrecon)
add_subdirectory(umve)